2007-10-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/canvas/canvas_editable.cc:
	* glom/utility_widgets/canvas/canvas_group_resizable.cc:
	* glom/utility_widgets/canvas/canvas_group_resizable.h:
	* glom/utility_widgets/canvas/canvas_item_movable.h:
	* glom/utility_widgets/canvas/canvas_rect_movable.h: All four corners 
	(the closest one to a grid line) now snap when moving a CanvasGroupResizable.

2007-10-09  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* glom/Makefile.am:
	* glom/utility_widgets/Makefile.am:
	* glom/utility_widgets/canvas/Move canvas_* into 
	sub-directory.

2007-10-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/canvas_grid.cc:
	* glom/utility_widgets/canvas_grid.h: Added snap 
	sensitivity as a member.
	* glom/utility_widgets/canvas_group_resizable.cc:
	* glom/utility_widgets/canvas_item_movable.cc:
	* glom/utility_widgets/canvas_item_movable.h: Added
	snap_position() virtual method.
	* glom/utility_widgets/canvas_rect_movable.cc:
	* glom/utility_widgets/canvas_rect_movable.h: Added 
	set_snap_corner(enum) and used the corner to implement 
	snap_position(). The corners now snap as expected.

2007-10-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/Makefile.am:
	* glom/utility_widgets/canvas_editable.cc:
	* glom/utility_widgets/canvas_editable.h:
	* glom/utility_widgets/canvas_grid.cc:
	* glom/utility_widgets/canvas_grid.h:
	* glom/utility_widgets/canvas_group_resizable.cc:
	* glom/utility_widgets/canvas_item_movable.cc:
	* glom/utility_widgets/canvas_item_movable.h:
	* glom/utility_widgets/test_canvas_editable.cc: Implement a visible 
	grid to which the corners snap when resizing. This only makes sense 
	so far for the top-left corner.

2007-10-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/Makefile.am:
	* glom/utility_widgets/canvas_group_resizable.cc:
	* glom/utility_widgets/canvas_group_resizable.h:
	* glom/utility_widgets/canvas_item_movable.cc: